Fix alignment of category matching suggest item

--- a/src/scss/includes/search_form.scss
+++ b/src/scss/includes/search_form.scss
@@ -186,9 +186,9 @@ input[type="search"] {
 .autocomplete_suggestion--category {
   .autocomplete-icon {
     font-size: 22px;
-    width: 22px;
-    height: 22px;
-    margin: 0 13px;
+    width: 24px;
+    height: 24px;
+    margin: 0 32px 0 18px;
     border-radius: 50%;
   }
 }
